@@ -5,11 +5,13 @@ Current Version 0.4
 - New Feature: KEGG pathway analysis for heatmap clusters
 - New Feature: Categorical concept sorting in heatmap
 - New Feature: SmartR is now capable of displaying static images generated by R
+- New Feature: Subset selection is now shown in the SmartR tab, similar to Advanced Workflows
 - Improved error handling
 - Heatmap: Fixed a bug which caused the "Load 100 add. feat." button to fail
 - Heatmap: Fixed a bug that sometimes occured when applying a cutoff
 - Heatmap: Fixed a bug which caused additional LDD to be not displayed correctly
 - Heatmap: Fixed a bug that occured when two LDD nodes had the same name
+- Heatmap: Fixed a bug which causes the wrong options to display when changing number of subsets
 - Fixed a bug which caused the previous session to be resycled when not wanted
 - Timeline: Fixed the correlogram feature after it was broken by 0.3
 - Timeline: Fixed a bug which occured when the first/last timepoint was not in the zoom range
